props editor spacing fix

--- a/thing-editor/src/editor/style.css
+++ b/thing-editor/src/editor/style.css
@@ -436,7 +436,7 @@ textarea:focus-visible {
 	width: calc(100% - 20px);
 	background: var(--window-bg-color);
 }
-.props-editor .props-group,
+.props-group:nth-of-type(2),
 .choosing-item:has(.path-choose-item):nth-of-type(2) {
 	margin-top: 32px;
 }
